Fix answer indicators, overflow-y, and remove duplicate id (#3157)

--- a/packages/core/src/components/shared/TableOfContents.less
+++ b/packages/core/src/components/shared/TableOfContents.less
@@ -200,16 +200,27 @@
         background: hsla(194, 100%, 15%, 0.1);
         display: flex;
         justify-content: center;
-        align-items: center;
-        gap: 3px;
+        gap: 4px;
         color: white;
         line-height: 12px;
-        font-size: 9px;
+        font-size: 10px;
 
         &.big {
           padding: 0 3px;
           width: auto;
           min-width: 16px;
+
+          .img {
+            line-height: 11px;
+
+            svg {
+              height: 12px;
+            }
+          }
+
+          .formula {
+            line-height: 10px;
+          }
         }
 
         &.ok {
